--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/新建文件夹.loader.js";
+      var loaderUrl = buildUrl + "/272ad5bb23c1bbb66f64ccd17eae5c6c.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/新建文件夹.data.br",
-        frameworkUrl: buildUrl + "/新建文件夹.framework.js.br",
-        codeUrl: buildUrl + "/新建文件夹.wasm.br",
+        dataUrl: buildUrl + "/af2d814f968fd64631854bed13a75833.data",
+        frameworkUrl: buildUrl + "/e559ccb80c303ae9de4c36a2c92d5a4f.framework.js",
+        codeUrl: buildUrl + "/b226a3b43598309cd9da715575899bbe.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "demo",
